src/objects/Service_Catalog_Entry__c.object
<CustomObject>
    <description>This object tracks the Tech Service Catalog Entry records.</description>
    <fields>
        <fullName>AVGCB__c</fullName>
        <formula>(CPMC_1__c + MMMC_c_1__c + STMC_c_1__c)</formula>
        <label>zAVG Capability metric calc</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approval_Submission_date__c</fullName>
        <label>Approval Submission date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Business_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Where in the AECOM organization is this team located?</inlineHelpText>
        <label>Business Line</label>
        <referenceTo>Business_Line__c</referenceTo>
        <relationshipLabel>Technology Service Catalog Entries</relationshipLabel>
        <relationshipName>Technology_Service_Catalog_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CPMC_1__c</fullName>
        <inlineHelpText>Tracks the numerical indicator given to # Of client projects question.</inlineHelpText>
        <label>zCPMC 1</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Capability_Description__c</fullName>
        <inlineHelpText>Enter a 1 sentence description of the Capability.</inlineHelpText>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Capability_Indicator_Description__c</fullName>
        <formula>IF(AVGCB__c&lt;= 2, &quot;In development or not ready for client use. A project in the pilot phase, possibly with a Client.&quot;, 
IF((AVGCB__c = 3), &quot;In use by no more than 1 client, past performance and marketing materials either do not exist or are incomplete. One off type of solution, unique to Client needs. Not yet a repeatable solution.&quot;, 
IF((AVGCB__c = 4), &quot;In use by at least 1 client but no more than 5 clients with solid past performance writeup and some marketing materials available. A repeatable solution.&quot;, 
IF(AVGCB__c &gt;= 5, &quot;In use by at least 5 clients with solid past performance writeups available and well documented marketing materials. A repeatable solution.&quot;, &quot;&quot;))))</formula>
        <label>Capability Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Capability_Indicator_Questions__c</fullName>
        <formula>&quot;Answer the following questions for the &apos;Capability Indicator&apos; field&quot;</formula>
        <label>Capability Indicator Questions:</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Capability_Indicator__c</fullName>
        <formula>IF(AVGCB__c &lt;= 2, IMAGE(&quot;/resource/1433789415000/SmallRedDot&quot;, &quot;RED&quot;), 
IF((AVGCB__c = 3),IMAGE(&quot;/resource/1433791069000/SmallAmberDots&quot;, &quot;AMBER&quot;), 
IF((AVGCB__c = 4),IMAGE(&quot;/resource/1433790861000/SmallGreenDot&quot;, &quot;GREEN&quot;),
IF(AVGCB__c &gt;= 5, IMAGE(&quot;/resource/1433791210000/SmallBlueDot&quot;,&quot;BLUE&quot;), &quot;&quot;))))</formula>
        <label>Capability</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Capability_Type__c</fullName>
        <inlineHelpText>Is this capability for internal use, external use, or both</inlineHelpText>
        <label>Who would use this?</label>
        <picklist>
            <picklistValues>
                <fullName>Used internally at AECOM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Used externally on client projects</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Capacity_Description__c</fullName>
        <formula>CASE(How_soon_is_team_expansion_possible__c, 
&quot;Unable to expand without an investment&quot;, &quot;Team is fully engaged and unable to expand to additional clients without an investment or significant lead time.&quot;, 
&quot;&gt;30 days&quot;, &quot;Expansion is possible but time (&gt;30 days) will be needed to move people around to ensure proper support.&quot;, 
&quot;&lt;30 days&quot;, &quot;Expansion is possible (&lt;30 days) with little impact to existing clients.&quot;, 
&quot;Immediately&quot;, &quot;Capacity is available and ready to expand to additional clients immediately.&quot;, 
&quot;&quot;)</formula>
        <label>Capacity Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Capacity_Indicator_Questions__c</fullName>
        <formula>&quot;Answer the following questions for the &apos;Capacity Indicator&apos; field&quot;</formula>
        <label>Capacity Indicator Questions:</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Capacity_Indicator__c</fullName>
        <formula>IMAGE( 
CASE(How_soon_is_team_expansion_possible__c, 
&quot;Unable to expand without an investment&quot;, &quot;/servlet/servlet.FileDownload?file=015M0000000cVbZ&quot;, 
&quot;&gt;30 days&quot;, &quot;/servlet/servlet.FileDownload?file=015M0000000cVbU&quot;, 
&quot;&lt;30 days&quot;, &quot;/servlet/servlet.FileDownload?file=015M0000000cVbe&quot;, 
&quot;Immediately&quot;, &quot;/servlet/servlet.FileDownload?file=015M0000000cVal&quot;, 
&quot;/s.gif&quot;), 
&quot;Capacity Indicator&quot;)</formula>
        <inlineHelpText>Note: Not just about people</inlineHelpText>
        <label>Capacity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category_Other__c</fullName>
        <inlineHelpText>If you choose “Other” as a category, please tell us what that is here.</inlineHelpText>
        <label>Category Other</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <inlineHelpText>Please choose all the appropriate categories for this catalog entry.</inlineHelpText>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>AECOM Intellectual Property</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application Development &amp; Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asset Management solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BIM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Certifications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cloud &amp; Infrastructure services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Converged Resilience</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Immersive Technologies &amp; Visualization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information &amp; Data Management services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT Operations &amp; Support services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sensors, Remote Monitoring, Smart Cities</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Cost_and_Pricing_Models__c</fullName>
        <inlineHelpText>If you want to share costing information with projects or pricing information with clients, please describe it here.  If not, simply write, “Available upon request.”</inlineHelpText>
        <label>Cost and Pricing Models</label>
        <length>12000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Customer_Rating_Count__c</fullName>
        <formula>&quot;(&quot; &amp; TEXT(Rating_Count__c) &amp; &quot;)&quot;</formula>
        <label>Number of Reviews</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DBFO_Strategy__c</fullName>
        <inlineHelpText>Where in the Project Lifecycle does this capability apply?  If multiple, please describe all.</inlineHelpText>
        <label>Project Lifecycle</label>
        <length>12000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <formula>Owner:User.Department</formula>
        <label>Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_you_have_project_references__c</fullName>
        <inlineHelpText>Answer this question to determine &quot;Capability Indicator&quot;</inlineHelpText>
        <label>Do you have project references?</label>
        <picklist>
            <picklistValues>
                <fullName>No references</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Limited references</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solid references</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Does_Solution_comply_w_Industry_Std__c</fullName>
        <inlineHelpText>Answer this question to assist in determining &quot;Standards Indicator&quot;</inlineHelpText>
        <label>Does Solution comply w/ Industry Std?</label>
        <picklist>
            <picklistValues>
                <fullName>Solution complies with the only recognized industry standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solution uses a single standard which is not necessarily the industry standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multiple standards in use and there is no single industry standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No standards in use</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Geography__c</fullName>
        <formula>Owner:User.Geography__c</formula>
        <label>Geography</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gold_Details_del__c</fullName>
        <inlineHelpText>Enter the details of the Gold level offering.</inlineHelpText>
        <label>Service Offering Gold</label>
        <length>12000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>How_many_client_projects__c</fullName>
        <inlineHelpText>Answer this question to determine &quot;Capability Indicator&quot;</inlineHelpText>
        <label>How many client projects?</label>
        <picklist>
            <picklistValues>
                <fullName>No clients</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>At least 1 client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than 1 but less than 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than 5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_soon_is_team_expansion_possible__c</fullName>
        <inlineHelpText>Answer this question to determine &quot;Capacity Indicator&quot;</inlineHelpText>
        <label>How soon is team expansion possible?</label>
        <picklist>
            <picklistValues>
                <fullName>Immediately</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&lt;30 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt;30 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unable to expand without an investment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Tracks approval of the record.</description>
        <label>Is Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Rejected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Rejected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_there_a_solution_support_team__c</fullName>
        <inlineHelpText>Answer this question to determine &quot;Capability Indicator&quot;</inlineHelpText>
        <label>Is there a solution support team?</label>
        <picklist>
            <picklistValues>
                <fullName>No support team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Limited support team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strong support team</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MMMC_c_1__c</fullName>
        <label>zMMMC__c 1</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Marketing_materials_case_studies__c</fullName>
        <inlineHelpText>Answer this question to determine &quot;Capability Indicator&quot;</inlineHelpText>
        <label>Marketing materials &amp; case studies?</label>
        <picklist>
            <picklistValues>
                <fullName>None exist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Limited documentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Well documented</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Name_of_Group_providing_Capability__c</fullName>
        <inlineHelpText>Name of the technology group providing this capability</inlineHelpText>
        <label>Name of Group providing Capability</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Reviews__c</fullName>
        <label>Number of Customer Reviews</label>
        <summaryForeignKey>Service_Catalog_Entry_Ratings__c.Technology_Service_Catalog_Entry__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Overall_Rating__c</fullName>
        <formula>IF(Rating_Sum__c &gt; 0, Rating_Sum__c / Rating_Count__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overall Rating</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PRMC_c_1__c</fullName>
        <label>zPRMC__c 1</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rating_Count__c</fullName>
        <label>Rating Count</label>
        <summaryForeignKey>Service_Catalog_Entry_Ratings__c.Technology_Service_Catalog_Entry__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Rating_Sum__c</fullName>
        <label>Rating Sum</label>
        <summarizedField>Service_Catalog_Entry_Ratings__c.Rating_Sum_Hold__c</summarizedField>
        <summaryForeignKey>Service_Catalog_Entry_Ratings__c.Technology_Service_Catalog_Entry__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <formula>IMAGE( 
CASE(ROUND(Overall_Rating__c,0),
0, &quot;/img/samples/stars_000.gif&quot;,
1, &quot;/img/samples/stars_100.gif&quot;, 
2, &quot;/img/samples/stars_200.gif&quot;, 
3, &quot;/img/samples/stars_300.gif&quot;, 
4, &quot;/img/samples/stars_400.gif&quot;, 
5, &quot;/img/samples/stars_500.gif&quot;, 
&quot;/img/samples/stars_000.gif&quot;), 
&quot;rating&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Rating Summary</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recommended_Proposal_Language__c</fullName>
        <inlineHelpText>This is meant to support direct client engagement on the capability/service. This will enable bid teams to quickly respond to Request for Information. This language is not to be used in proposals. For exact proposal language and pricing, contact the SME.</inlineHelpText>
        <label>Recommended Proposal Language</label>
        <length>12000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SME__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; Owner:User.Id, Owner:User.frm_Name__c,&quot;_self&quot;)</formula>
        <label>Subject Matter Expert</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STMC_c_1__c</fullName>
        <label>zSTMC__c 1</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Secondary_SME__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>These are the other people who can be contacted for this capability.</inlineHelpText>
        <label>Secondary Subject Matter Expert</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Technology_Service_Catalog_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Offering_Details__c</fullName>
        <inlineHelpText>Provide details &amp; explain the difference between each tiered (Platinum, Gold, Silver, Bronze )service levels?</inlineHelpText>
        <label>Service Offering Details</label>
        <length>12000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Service_Offering_Level__c</fullName>
        <inlineHelpText>Is your capability mature enough to be called a service offering? Do you offer various levels of support packages and pricing depending on project/client needs? Do you offer a tiered service solution (e.g. Platinum is best, bronze is basic.)?</inlineHelpText>
        <label>Service Offering Level</label>
        <picklist>
            <picklistValues>
                <fullName>Bronze</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platinum</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Standards_Description__c</fullName>
        <formula>CASE(Does_Solution_comply_w_Industry_Std__c, 
&quot;No standards in use&quot;, &quot;No standard is in use.&quot;, 
&quot;Multiple standards in use and there is no single industry standard&quot;, &quot;Multiple standards are in use with no single standard showing as predominant.&quot;, 
&quot;Solution uses a single standard which is not necessarily the industry standard&quot;, &quot;Industry standard(s) exist, but AECOM has standardized on a single standard, not necessarily a recognized industry standard.&quot;, 
&quot;Solution complies with the only recognized industry standard&quot;, &quot;AECOM is using and endorsing only a recognized industry standard.&quot;, 
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Standards Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Standards_Indicator_Questions__c</fullName>
        <formula>&quot;Answer the following questions for the &apos;Standards Indicator&apos; field&quot;</formula>
        <label>Standards Indicator Questions:</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Standards_Indicator__c</fullName>
        <formula>IMAGE( 
CASE(Does_Solution_comply_w_Industry_Std__c, 
&quot;No standards in use&quot;, &quot;/resource/1433789415000/SmallRedDot&quot;, 
&quot;Multiple standards in use and there is no single industry standard&quot;, &quot;/resource/1433791069000/SmallAmberDots&quot;, 
&quot;Solution uses a single standard which is not necessarily the industry standard&quot;, &quot;/resource/1433790861000/SmallGreenDot&quot;, 
&quot;Solution complies with the only recognized industry standard&quot;, &quot;/resource/1433791210000/SmallBlueDot&quot;, 
&quot;/s.gif&quot;), 
&quot;Standards Indicator&quot;)</formula>
        <inlineHelpText>SME does a self-assessment of their own capability when submitting their catalog entry 
This would then need to be reviewed &amp; approved by Team TaaS ( workflow for review &amp; approval process)</inlineHelpText>
        <label>Standards</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Standards__c</fullName>
        <label>Standards</label>
        <picklist>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blue</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>Status of the Service Catalog entry.</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Published</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revisions Needed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Strategic_Initiative_Indicator__c</fullName>
        <formula>IF(ISPICKVAL(Strategic_Investment__c, &quot;Yes&quot;), IMAGE(&quot;/servlet/servlet.FileDownload?file=015M0000000cVcr&quot;, &quot;&quot;, 40, 40) &amp; &quot;  &quot; &amp; &quot;   &quot; &amp; &quot;AECOM is investing in this Capability&quot;, &quot;&quot;)</formula>
        <label>Strategic Initiative Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Strategic_Investment__c</fullName>
        <inlineHelpText>This is an indicator which shows AECOM is currently investing in developing/growing this capability.</inlineHelpText>
        <label>Strategic Investment</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Team_Location__c</fullName>
        <inlineHelpText>List all the locations for your team</inlineHelpText>
        <label>Team Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Team_Size__c</fullName>
        <inlineHelpText>Indicate the team size in quantity including the breakout by type (AECOM FTE, backup, subcontractors)</inlineHelpText>
        <label>Team Size</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Tertiary_SME__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>These are the other people who can be contacted for this capability.</inlineHelpText>
        <label>Tertiary Subject Matter Expert</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Technology_Service_Catalog_Entries1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Value_Proposition__c</fullName>
        <inlineHelpText>&quot;Value Proposition catches the readers attention and outlines the highlights of the Capability.&quot;</inlineHelpText>
        <label>Value Proposition &amp; Service Description</label>
        <length>12000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Web_Links__c</fullName>
        <inlineHelpText>Please insert all links to additional materials you want available for discovery during a search of the catalog.  Remember that you, as the SME, are responsible for maintaining this information.</inlineHelpText>
        <label>External Materials</label>
        <length>1000</length>
        <type>Html</type>
    </fields>
    <label>Technology Service Catalog Entry</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Category__c</columns>
        <columns>Capability_Description__c</columns>
        <columns>SME__c</columns>
        <columns>Capability_Indicator__c</columns>
        <columns>Capacity_Indicator__c</columns>
        <columns>Standards_Indicator__c</columns>
        <columns>Status__c</columns>
        <columns>Rating__c</columns>
        <columns>Customer_Rating_Count__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
        <sharedTo>
            <group>TaaS_Catalog_approval</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Published_Catalog_Entries</fullName>
        <columns>NAME</columns>
        <columns>Category__c</columns>
        <columns>Capability_Description__c</columns>
        <columns>SME__c</columns>
        <columns>Capability_Indicator__c</columns>
        <columns>Capacity_Indicator__c</columns>
        <columns>Standards_Indicator__c</columns>
        <columns>Status__c</columns>
        <columns>Rating__c</columns>
        <columns>Customer_Rating_Count__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Published</value>
        </filters>
        <label>All Published Catalog Entries</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Category_AECOM_Intellectual_Property</fullName>
        <booleanFilter>1</booleanFilter>
        <columns>NAME</columns>
        <columns>Category__c</columns>
        <columns>Capability_Description__c</columns>
        <columns>SME__c</columns>
        <columns>Capability_Indicator__c</columns>
        <columns>Capacity_Indicator__c</columns>
        <columns>Standards_Indicator__c</columns>
        <columns>Status__c</columns>
        <columns>Rating__c</columns>
        <columns>Customer_Rating_Count__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Category__c</field>
            <operation>includes</operation>
            <value>AECOM Intellectual Property</value>
        </filters>
        <label>Category- AECOM Intellectual Property</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Category_Application_Dev_Mobile</fullName>
        <booleanFilter>1</booleanFilter>
        <columns>NAME</columns>
        <columns>Category__c</columns>
        <columns>Capability_Description__c</columns>
        <columns>SME__c</columns>
        <columns>Capability_Indicator__c</columns>
        <columns>Capacity_Indicator__c</columns>
        <columns>Standards_Indicator__c</columns>
        <columns>Status__c</columns>
        <columns>Rating__c</columns>
        <columns>Customer_Rating_Count__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Category__c</field>
            <operation>includes</operation>
            <value>Application Development &amp; Mobile</value>
        </filters>
        <label>Category- Application Dev. &amp; Mobile</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Category_Asset_Management_solutions</fullName>
        <booleanFilter>1</booleanFilter>
        <columns>NAME</columns>
        <columns>Category__c</columns>
        <columns>Capability_Description__c</columns>
        <columns>SME__c</columns>
        <columns>Capability_Indicator__c</columns>
        <columns>Capacity_Indicator__c</columns>
        <columns>Standards_Indicator__c</columns>
        <columns>Status__c</columns>
        <columns>Rating__c</columns>
        <columns>Customer_Rating_Count__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Category__c</field>
            <operation>includes</operation>
            <value>Asset Management solutions</value>
        </filters>
        <label>Category- Asset Management solutions</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Category_BIM</fullName>
        <booleanFilter>1</booleanFilter>
        <columns>NAME</columns>
        <columns>Category__c</columns>
        <columns>Capability_Description__c</columns>
        <columns>SME__c</columns>
        <columns>Capability_Indicator__c</columns>
        <columns>Capacity_Indicator__c</columns>
        <columns>Standards_Indicator__c</columns>
        <columns>Status__c</columns>
        <columns>Rating__c</columns>
        <columns>Customer_Rating_Count__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Category__c</field>
            <operation>includes</operation>
            <value>BIM</value>
        </filters>
        <label>Category- BIM</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Category_Certifications</fullName>
        <booleanFilter>1</booleanFilter>
        <columns>NAME</columns>
        <columns>Category__c</columns>
        <columns>Capability_Description__c</columns>
        <columns>SME__c</columns>
        <columns>Capability_Indicator__c</columns>
        <columns>Capacity_Indicator__c</columns>
        <columns>Standards_Indicator__c</columns>
        <columns>Status__c</columns>
        <columns>Rating__c</columns>
        <columns>Customer_Rating_Count__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Category__c</field>
            <operation>includes</operation>
            <value>Certifications</value>
        </filters>
        <label>Category- Certifications</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Category_Cloud_Infrastructure_Services</fullName>
        <booleanFilter>1</booleanFilter>
        <columns>NAME</columns>
        <columns>Category__c</columns>
        <columns>Capability_Description__c</columns>
        <columns>SME__c</columns>
        <columns>Capability_Indicator__c</columns>
        <columns>Capacity_Indicator__c</columns>
        <columns>Standards_Indicator__c</columns>
        <columns>Status__c</columns>
        <columns>Rating__c</columns>
        <columns>Customer_Rating_Count__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Category__c</field>
            <operation>includes</operation>
            <value>Cloud &amp; Infrastructure services</value>
        </filters>
        <label>Category-Cloud &amp; Infrastructure Services</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Category_Converged_Resillience</fullName>
        <booleanFilter>1</booleanFilter>
        <columns>NAME</columns>
        <columns>Category__c</columns>
        <columns>Capability_Description__c</columns>
        <columns>SME__c</columns>
        <columns>Capability_Indicator__c</columns>
        <columns>Capacity_Indicator__c</columns>
        <columns>Standards_Indicator__c</columns>
        <columns>Status__c</columns>
        <columns>Rating__c</columns>
        <columns>Customer_Rating_Count__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Category__c</field>
            <operation>includes</operation>
            <value>Converged Resilience</value>
        </filters>
        <label>Category- Converged Resillience</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Category_IT_Ops_Support_Services</fullName>
        <booleanFilter>1</booleanFilter>
        <columns>NAME</columns>
        <columns>Category__c</columns>
        <columns>Capability_Description__c</columns>
        <columns>SME__c</columns>
        <columns>Capability_Indicator__c</columns>
        <columns>Capacity_Indicator__c</columns>
        <columns>Standards_Indicator__c</columns>
        <columns>Status__c</columns>
        <columns>Rating__c</columns>
        <columns>Customer_Rating_Count__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Category__c</field>
            <operation>includes</operation>
            <value>IT Operations &amp; Support services</value>
        </filters>
        <label>Category- IT Ops. &amp; Support Services</label>
        <language>en_US</language>
    </listViews>
</CustomObject>